--- a/assets/css/landing-page.css
+++ b/assets/css/landing-page.css
@@ -1,110 +1,101 @@
 * {
-  font-family: arial;
-}
-
-.banner {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 30px;
-  align-items: center;
-}
-
-.grid {
-  width: 100%;
-  height: auto;
-}
-
-.header {
-  width: 35rem;
-  line-height: 20px;
-  position: relative;
-  bottom: 60px;
-  margin-left: 10rem;
-}
-
-.text {
-  line-height: 2.5rem;
-  font-family: 'Arial';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 36px;
-}
-
-.deskripsi {
-  line-height: 20px;
-  font-family: 'Arial';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 14px;
-}
-
-.mobil {
-  background-image: url(../../assets/images/img_car.png);
-}
-
-.mobil > img {
-  width: 100%;
-  object-fit: cover;
-}
-
-.banner button {
-  font-size: 20px;
-  border-radius: 10px 0 5px;
-  background-color: green;
-  transition: all ease-in 0.5s 0s;
-}
-
-.banner button:hover {
-  transform: rotate(3deg);
-  color: #fff;
-}
-
-@media screen and (max-width: 800px) {
-  .banner {
-    background-color: azure;
+    font-family: arial;
   }
-  .judul {
-    flex: none;
-    order: 0;
-    align-self: stretch;
-    flex-grow: 0;
-    width: 328px;
-    height: 216px;
+  
+  .banner {
+    display: grid;
+    /* gap: 16px; */
+    align-items: center;
+    background-color: #F1F3FF;
 
+  }
+
+  .judul {
     font-family: 'Arial';
     font-style: normal;
     font-weight: 700;
     font-size: 36px;
-    line-height: 150%;
+    color: #000000;
+    line-height: 54px;
+    margin: 0px 0px 16px;
   }
-
-  .deskripsi {
-    flex: none;
-    order: 1;
-    align-self: stretch;
-    flex-grow: 0;
-
-    width: 328px;
-    height: 60px;
-
+  
+  .deskripsi { 
+    color: #000000;
     font-family: 'Arial';
     font-style: normal;
     font-weight: 700;
     font-size: 14px;
-    line-height: 20px;
+    line-height: 1.5
   }
-
+  
   .mobil > img {
-    position: absolute;
-    width: 344.22px;
-    height: 199px;
-    left: 360.22px;
-    top: 458px;
+    
+    object-fit: cover;
+    width: 100%;
+    height: auto;
+  }
+  
+  .banner button {
+    color: #eaeaea;
+    font-size: 14px;
+    border: 1px solid;
+    background-color: #5cb85f;
+    font-weight: 700;
+    line-height: 1.5;
+    padding: 8px 12px;
   }
 
-  button {
-    flex: none;
-    order: 0;
-    flex-grow: 0;
+  /* potrait small device */
+  @media only screen and (max-width:575px){
+    .text{
+      font-size: 16px;
+    }
+    .banner {
+      grid-template-columns: 1fr;
+    }
   }
-}
+  
+  /* landscape small device and up*/
+  @media only screen and (min-width:576px){
+    .text{
+      font-size: 16px;
+    }
+    .banner {
+      grid-template-columns: 1fr;
+      gap: 24px;
+    }
+  }
+  /* tablets and up*/
+  @media only screen and (min-width:768px){
+    .text{
+      font-size: 20px;
+    }
+  }
+  /* desktop small and up*/
+  @media only screen and (min-width:992px){
+    .text{
+      font-size: 16px;
+    }
+    .gridtext{
+      margin-left: 50px;
+    }
+    .banner {
+      grid-template-columns: 1fr 1fr;
+      gap: 32px;
+    }
+  }
+  /* desktop med and up*/
+  @media only screen and (min-width:1200px){
+    .text{
+      font-size: 16px;
+    }
+  }
+  /* desktop high and up*/
+  @media only screen and (min-width:1400px){
+    .text{
+      font-size: 16px;
+    }
+  }
+  
+  
